Support Array Injection
Support injecting array instances